finished making the site responsive on mobile and ipads, fixed the astra styling issue

--- a/client/src/pages/Dream Dictionary/assets/dreamdictionary.module.css
+++ b/client/src/pages/Dream Dictionary/assets/dreamdictionary.module.css
@@ -106,9 +106,9 @@
     .description p {
         font-size: 15px; 
       }
-    .description{
+    .description{ 
         height: 400px;
-        width: 70%;
+        width: 60%;
         margin: 10px;
     }
 
@@ -116,7 +116,7 @@
         height: 480px;
     }
     .description h2:first-child {
-        font-size: 30px; 
+        font-size: 25px; 
     }
     
 
